# drf-api-permissions-postgres

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
api_permission/: asgi.py  settings.py  urls.py  wsgi.py
posts/: admin.py  models.py
